# super-crawler

./: .gitignore  AIDataInterface.cpp  AIDataInterface.h  AIDataInterface_README.md  AIDialogueClient.cpp  AIDialogueClient.h  AliCrawl.cpp  AliCrawl.h  AliCrawler.cpp  BaseCrawler.h  CMakeLists.txt  CMakeLists_mysql_test.txt  CMakeLists_tax_test.txt  Crawl.cpp  Crawl.h  CrawlThreadManager.h  CustomInfoDialog.cpp  CustomInfoDialog.h  DeepSeekClient.cpp  DeepSeekClient.h  DeepSeek_Integration_README.md  HouseData.h  HouseInfo.h  KeCrawler.h  LLMClient.cpp  LLMClient.h  MYSQL.cpp  MYSQL.h  README.md  TaxCalculator.cpp  TaxCalculator.h  Test.html  house_intent_config.txt  house_intent_model.cpp  house_intent_model.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mysql_test.cpp  (+3 more)
AIc/: AIDataInterface.cpp  AIDialogueClient.cpp  DeepSeekClient.cpp
AIh/: AIDataInterface.h  AIDialogueClient.h  DeepSeekClient.h
WebServer/: HouseInfoServer.pro  README.md  deploy-to-server.ps1  test_diagnostic.html
WebServer/config/: config.json
WebServer/resources/web/: admin.html  ai-assistant.html  debug.html  house-detail.html  test_password_verify.html
WebServer/resources/web/js/: common.js  index.js
WebServer/scripts/: fix_database.bat  upgrade.sh
WebServer/src/: main.cpp
WebServer/src/services/: AIService.cpp  EmailService.h
gumbo/src/: attribute.c  parser.c  string_piece.h  utf8.c
web/: CMakeLists.txt  map.html  qwebchannel.js  sync-to-server.ps1  test_message.html
web/resources/web/: favorites.html  index.html  settings.html  statistics.html
web/resources/web/css/: style.css
web/resources/web/js/: config.js
web/scripts/: add_disabled_field.sql  fix_database.sh  fix_users_table.sql
web/src/database/: DatabaseManager.cpp  DatabaseManager.h
web/src/server/: HttpServer.cpp  HttpServer.h
web/src/services/: AIService.h  EmailService.cpp
